Fixing layout issues

--- a/sas/booking/static/style/user.css
+++ b/sas/booking/static/style/user.css
@@ -69,7 +69,7 @@ hr.star-light:after {
   width: 80%;
   margin: auto;
   overflow: auto;
-  height: 90%;
+  height: 70%;
 }
 
 .form-horizontal {
